# rust-cli-starter

./: Cargo.toml  README.md
src/: lib.rs  main.rs
